--- a/overlay/device/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/device/frameworks/base/core/res/res/values/config.xml
@@ -78,10 +78,12 @@
     </integer-array>
 
     <integer-array name="config_keyboardTapVibePattern">
+        <item>0</item>
         <item>30</item>
     </integer-array>
 
     <integer-array name="config_longPressVibePattern">
+        <item>0</item>
         <item>30</item>
     </integer-array>
 
@@ -141,6 +143,7 @@
     </integer-array>
 
     <integer-array name="config_virtualKeyVibePattern">
+        <item>0</item>
         <item>28</item>
     </integer-array>
 
